# ddo

./: README.md  pyproject.toml
src/ddo/: __init__.py  autocomplete.py  cli.py  dictionary.py
