[project]
name = "ddo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[project.scripts]
ddo = "ddo:cli.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
