[project]
name = "ddo"
version = "1.0.0"
description = "Search Den Danske Ordbog (ordnet.dk) from the terminal!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "click>=8.1.7",
    "requests>=2.32.3",
    "rich>=13.9.4",
]

[project.scripts]
ddo = "ddo:cli.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
